Adicionado notificações do login

--- a/src/app/post/listapublicacoes/listapublicacoes.component.html
+++ b/src/app/post/listapublicacoes/listapublicacoes.component.html
@@ -13,7 +13,9 @@
                 </div>
     
                 <div class="card-body">
-                    <table class="table table-hover">
+
+                    <img *ngIf="statusLoading"  src="./../../../assets//animate/Eclipse-1s-200px.gif" alt="">
+                    <table  class="table table-hover">
                         <thead>
                           <tr>
                             <th scope="col">#</th>
