--- a/src/app/contato/listacontatos/listacontatos.component.html
+++ b/src/app/contato/listacontatos/listacontatos.component.html
@@ -46,6 +46,7 @@
       <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Fechar</button>
     </div>
   </ng-template>
+  
 
 
 <table class="table">
@@ -69,7 +70,7 @@
                 <button class="btn btn-sm btn-danger" (click)="deleteContato(contato.id)">
                     <i class="fa fa-trash-o" aria-hidden="true"></i> Excluir
                 </button>
-                <button class="btn btn-sm btn-success">
+                <button routerLink="responder/{{contato.id}}"class="btn btn-sm btn-success">
                     <i class="fa fa-reply" aria-hidden="true"></i> Responder
                 </button>
           </td>
