--- a/src/app/post/editar/editar.component.html
+++ b/src/app/post/editar/editar.component.html
@@ -9,7 +9,7 @@
                 <input [(ngModel)]="post.titulo" name="titulo" id="titulo" type="text" class="form-control">
             </div>
 
-             <ckeditor [(ngModel)]="post.descricao" data="Digite seu Artigo aqui !!!"></ckeditor>
+             <ckeditor [editor]="Editor" [(ngModel)]="post.descricao"></ckeditor>
             
            
        
