--- a/src/app/post/novapublicacao/novapublicacao.component.html
+++ b/src/app/post/novapublicacao/novapublicacao.component.html
@@ -7,7 +7,8 @@
                 <input [(ngModel)]="post.titulo" name="titulo" id="titulo" type="text" class="form-control">
             </div>
 
-             <ckeditor [(ngModel)]="post.descricao" data="Digite seu Artigo aqui !!!"></ckeditor>
+             
+            <ckeditor [editor]="Editor" [(ngModel)]="post.descricao"></ckeditor>
             
            
        
