--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -12,9 +12,7 @@
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item d-md-down-none">
-      <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
-    </li>
+  
 
 
     <li class="nav-item dropdown" dropdown placement="bottom right">
@@ -24,12 +22,12 @@
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
 
     
-        <a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comentarios<span class="badge badge-warning">42</span></a>
-        <div class="dropdown-header text-center"><strong>Settings</strong></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Perfil</a>
-        <a class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Configurações</a>
+       <!-- <a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comentarios<span class="badge badge-warning">42</span></a>-->
+        
+       <!-- <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Perfil</a>-->
+        <a routerLink="/configuracoes"class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Configurações</a>
     
-        <a (click)="logout()"class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
+        <a (click)="logout()"class="dropdown-item" href="#"><i class="fa fa-lock"></i> Sair</a>
       </div>
     </li>
   </ul>
@@ -49,7 +47,7 @@
         <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
           <a class="btn" href="#"><i class="icon-speech"></i></a>
           <a class="btn" [routerLink]="['/dashboard']"><i class="icon-graph"></i> &nbsp;Dashboard</a>
-          <a class="btn" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>
+          <a class="btn" routerLink="/configuracoes" href="#"><i class="icon-settings"></i> &nbsp;Configurações</a>
         </div>
       </li>
     </cui-breadcrumb>
