--- a/src/app/post/novapublicacao/novapublicacao.component.html
+++ b/src/app/post/novapublicacao/novapublicacao.component.html
@@ -46,6 +46,6 @@
 
             </div>
 
-            <button routerLink=".." class="btn btn-secondary btn-sm">Voltar</button>
+            <button routerLink="/../publicacoes/1" class="btn btn-secondary btn-sm">Voltar</button>
         </div>
     </div>
